// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuForm should render the MenuForm correctly 1`] = `
<div>
  <div
    class="menu-date"
  >
    <h3>
      Saturday, 16th June 2018
      <span>
         ▾
      </span>
    </h3>
    <div
      class="datepicker-div"
    >
      <input
        id="datepicker"
        type="date"
      />
    </div>
  </div>
  <div
    class="meal-options-list"
  >
    <div
      class="form-input"
    >
      <label
        class="hide"
        for="search"
      >
        Search For Meals
      </label>
      <input
        class="open menu-search-input"
        id="search"
        name="search"
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component "
        style="height: 100px; overflow: auto;"
      >
        <div
          class="scroller"
        >
          <div
            class="form-input-checkbox"
          >
            <input
              checked=""
              id="81211c24-51c0-46ec-b1e0-18db55880958"
              name="81211c24-51c0-46ec-b1e0-18db55880958"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Jollof Rice, Beef and Plantain
            </label>
          </div>
          <div
            class="form-input-checkbox"
          >
            <input
              id="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              name="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Vegetable Sharwama and Guava Smoothie
            </label>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            aria-busy="true"
            aria-label="three-dots-loading"
            class="sc-beySPh gZmPOF mini-loader"
            data-testid="three-dots-loading"
            role="progressbar"
          >
            <svg
              data-testid="three-dots-svg"
              fill="#4fa94d"
              height="80"
              viewBox="0 0 120 30"
              width="80"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="15"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
              <circle
                attributeName="fill-opacity"
                cx="60"
                cy="15"
                from="1"
                r="9"
                to="0.3"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="9"
                  repeatCount="indefinite"
                  to="9"
                  values="9;15;9"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="0.5"
                  repeatCount="indefinite"
                  to="0.5"
                  values=".5;1;.5"
                />
              </circle>
              <circle
                cx="105"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="btn btn-pri btn-block"
    type="button"
  >
    SAVE MEAL OPTIONS
  </button>
</div>
`;

exports[`MenuForm should render the MenuForm correctly when fetching 1`] = `
<div>
  <div
    class="menu-date"
  >
    <h3>
      Saturday, 16th June 2018
      <span>
         ▾
      </span>
    </h3>
    <div
      class="datepicker-div"
    >
      <input
        id="datepicker"
        type="date"
      />
    </div>
  </div>
  <div
    class="meal-options-list"
  >
    <div
      class="form-input"
    >
      <label
        class="hide"
        for="search"
      >
        Search For Meals
      </label>
      <input
        class="open menu-search-input"
        id="search"
        name="search"
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
    <div
      class="text-center"
    >
      <div
        aria-busy="true"
        aria-label="three-dots-loading"
        class="sc-beySPh gZmPOF mini-loader"
        data-testid="three-dots-loading"
        role="progressbar"
      >
        <svg
          data-testid="three-dots-svg"
          fill="#4fa94d"
          height="80"
          viewBox="0 0 120 30"
          width="80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="15"
            cy="15"
            r="15"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="15"
              repeatCount="indefinite"
              to="15"
              values="15;9;15"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="1"
              repeatCount="indefinite"
              to="1"
              values="1;.5;1"
            />
          </circle>
          <circle
            attributeName="fill-opacity"
            cx="60"
            cy="15"
            from="1"
            r="9"
            to="0.3"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="9"
              repeatCount="indefinite"
              to="9"
              values="9;15;9"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="0.5"
              repeatCount="indefinite"
              to="0.5"
              values=".5;1;.5"
            />
          </circle>
          <circle
            cx="105"
            cy="15"
            r="15"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="15"
              repeatCount="indefinite"
              to="15"
              values="15;9;15"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="1"
              repeatCount="indefinite"
              to="1"
              values="1;.5;1"
            />
          </circle>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`MenuForm should render the MenuForm correctly when submitting 1`] = `
<div>
  <div
    class="menu-date"
  >
    <h3>
      Saturday, 16th June 2018
      <span>
         ▾
      </span>
    </h3>
    <div
      class="datepicker-div"
    >
      <input
        id="datepicker"
        type="date"
      />
    </div>
  </div>
  <div
    class="meal-options-list"
  >
    <div
      class="form-input"
    >
      <label
        class="hide"
        for="search"
      >
        Search For Meals
      </label>
      <input
        class="open menu-search-input"
        id="search"
        name="search"
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
    <div
      class="text-center"
    >
      <div
        aria-busy="true"
        aria-label="three-dots-loading"
        class="sc-beySPh gZmPOF mini-loader"
        data-testid="three-dots-loading"
        role="progressbar"
      >
        <svg
          data-testid="three-dots-svg"
          fill="#4fa94d"
          height="80"
          viewBox="0 0 120 30"
          width="80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="15"
            cy="15"
            r="15"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="15"
              repeatCount="indefinite"
              to="15"
              values="15;9;15"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="1"
              repeatCount="indefinite"
              to="1"
              values="1;.5;1"
            />
          </circle>
          <circle
            attributeName="fill-opacity"
            cx="60"
            cy="15"
            from="1"
            r="9"
            to="0.3"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="9"
              repeatCount="indefinite"
              to="9"
              values="9;15;9"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="0.5"
              repeatCount="indefinite"
              to="0.5"
              values=".5;1;.5"
            />
          </circle>
          <circle
            cx="105"
            cy="15"
            r="15"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="15"
              repeatCount="indefinite"
              to="15"
              values="15;9;15"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="1"
              repeatCount="indefinite"
              to="1"
              values="1;.5;1"
            />
          </circle>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`MenuForm should render the MenuForm correctly when there are no caterer meals 1`] = `
<div>
  <div
    class="menu-date"
  >
    <h3>
      Saturday, 16th June 2018
      <span>
         ▾
      </span>
    </h3>
    <div
      class="datepicker-div"
    >
      <input
        id="datepicker"
        type="date"
      />
    </div>
  </div>
  <div
    class="meal-options-list"
  >
    <div
      class="form-input"
    >
      <label
        class="hide"
        for="search"
      >
        Search For Meals
      </label>
      <input
        class="open menu-search-input"
        id="search"
        name="search"
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
    <p
      class="text-center info"
    >
      No Meals Found
    </p>
  </div>
</div>
`;

exports[`MenuForm should render the MenuForm correctly when there is a date error 1`] = `
<div>
  <p
    class="text-center danger"
  >
    Error
  </p>
  <div
    class="menu-date"
  >
    <h3>
      Saturday, 16th June 2018
      <span>
         ▾
      </span>
    </h3>
    <div
      class="datepicker-div"
    >
      <input
        id="datepicker"
        type="date"
      />
    </div>
  </div>
  <div
    class="meal-options-list"
  >
    <div
      class="form-input"
    >
      <label
        class="hide"
        for="search"
      >
        Search For Meals
      </label>
      <input
        class="open menu-search-input"
        id="search"
        name="search"
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component "
        style="height: 100px; overflow: auto;"
      >
        <div
          class="scroller"
        >
          <div
            class="form-input-checkbox"
          >
            <input
              checked=""
              id="81211c24-51c0-46ec-b1e0-18db55880958"
              name="81211c24-51c0-46ec-b1e0-18db55880958"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Jollof Rice, Beef and Plantain
            </label>
          </div>
          <div
            class="form-input-checkbox"
          >
            <input
              id="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              name="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Vegetable Sharwama and Guava Smoothie
            </label>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            aria-busy="true"
            aria-label="three-dots-loading"
            class="sc-beySPh gZmPOF mini-loader"
            data-testid="three-dots-loading"
            role="progressbar"
          >
            <svg
              data-testid="three-dots-svg"
              fill="#4fa94d"
              height="80"
              viewBox="0 0 120 30"
              width="80"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="15"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
              <circle
                attributeName="fill-opacity"
                cx="60"
                cy="15"
                from="1"
                r="9"
                to="0.3"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="9"
                  repeatCount="indefinite"
                  to="9"
                  values="9;15;9"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="0.5"
                  repeatCount="indefinite"
                  to="0.5"
                  values=".5;1;.5"
                />
              </circle>
              <circle
                cx="105"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="btn btn-pri btn-block"
    type="button"
  >
    SAVE MEAL OPTIONS
  </button>
</div>
`;

exports[`MenuForm should render the MenuForm correctly when there is a submit error 1`] = `
<div>
  <p
    class="text-center danger"
  >
    Error
  </p>
  <div
    class="menu-date"
  >
    <h3>
      Saturday, 16th June 2018
      <span>
         ▾
      </span>
    </h3>
    <div
      class="datepicker-div"
    >
      <input
        id="datepicker"
        type="date"
      />
    </div>
  </div>
  <div
    class="meal-options-list"
  >
    <div
      class="form-input"
    >
      <label
        class="hide"
        for="search"
      >
        Search For Meals
      </label>
      <input
        class="open menu-search-input"
        id="search"
        name="search"
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component "
        style="height: 100px; overflow: auto;"
      >
        <div
          class="scroller"
        >
          <div
            class="form-input-checkbox"
          >
            <input
              checked=""
              id="81211c24-51c0-46ec-b1e0-18db55880958"
              name="81211c24-51c0-46ec-b1e0-18db55880958"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Jollof Rice, Beef and Plantain
            </label>
          </div>
          <div
            class="form-input-checkbox"
          >
            <input
              id="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              name="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Vegetable Sharwama and Guava Smoothie
            </label>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            aria-busy="true"
            aria-label="three-dots-loading"
            class="sc-beySPh gZmPOF mini-loader"
            data-testid="three-dots-loading"
            role="progressbar"
          >
            <svg
              data-testid="three-dots-svg"
              fill="#4fa94d"
              height="80"
              viewBox="0 0 120 30"
              width="80"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="15"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
              <circle
                attributeName="fill-opacity"
                cx="60"
                cy="15"
                from="1"
                r="9"
                to="0.3"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="9"
                  repeatCount="indefinite"
                  to="9"
                  values="9;15;9"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="0.5"
                  repeatCount="indefinite"
                  to="0.5"
                  values=".5;1;.5"
                />
              </circle>
              <circle
                cx="105"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="btn btn-pri btn-block"
    type="button"
  >
    SAVE MEAL OPTIONS
  </button>
</div>
`;

exports[`MenuForm should render the connected MenuForm component correctly 1`] = `
<div>
  <div
    class="menu-date"
  >
    <h3>
      Saturday, 16th June 2018
      <span>
         ▾
      </span>
    </h3>
    <div
      class="datepicker-div"
    >
      <input
        id="datepicker"
        type="date"
      />
    </div>
  </div>
  <div
    class="meal-options-list"
  >
    <div
      class="form-input"
    >
      <label
        class="hide"
        for="search"
      >
        Search For Meals
      </label>
      <input
        class="open menu-search-input"
        id="search"
        name="search"
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component "
        style="height: 100px; overflow: auto;"
      >
        <div
          class="scroller"
        >
          <div
            class="form-input-checkbox"
          >
            <input
              checked=""
              id="81211c24-51c0-46ec-b1e0-18db55880958"
              name="81211c24-51c0-46ec-b1e0-18db55880958"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Jollof Rice, Beef and Plantain
            </label>
          </div>
          <div
            class="form-input-checkbox"
          >
            <input
              id="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              name="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Vegetable Sharwama and Guava Smoothie
            </label>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            aria-busy="true"
            aria-label="three-dots-loading"
            class="sc-beySPh gZmPOF mini-loader"
            data-testid="three-dots-loading"
            role="progressbar"
          >
            <svg
              data-testid="three-dots-svg"
              fill="#4fa94d"
              height="80"
              viewBox="0 0 120 30"
              width="80"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="15"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
              <circle
                attributeName="fill-opacity"
                cx="60"
                cy="15"
                from="1"
                r="9"
                to="0.3"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="9"
                  repeatCount="indefinite"
                  to="9"
                  values="9;15;9"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="0.5"
                  repeatCount="indefinite"
                  to="0.5"
                  values=".5;1;.5"
                />
              </circle>
              <circle
                cx="105"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="btn btn-pri btn-block"
    type="button"
  >
    SAVE MEAL OPTIONS
  </button>
</div>
`;

exports[`MenuForm should render the connected MenuForm with empty menuMetadata correctly 1`] = `
<div>
  <div
    class="menu-date"
  >
    <h3>
      Saturday, 16th June 2018
      <span>
         ▾
      </span>
    </h3>
    <div
      class="datepicker-div"
    >
      <input
        id="datepicker"
        type="date"
      />
    </div>
  </div>
  <div
    class="meal-options-list"
  >
    <div
      class="form-input"
    >
      <label
        class="hide"
        for="search"
      >
        Search For Meals
      </label>
      <input
        class="open menu-search-input"
        id="search"
        name="search"
        placeholder="Search For Meals"
        type="text"
        value=""
      />
    </div>
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component "
        style="height: 100px; overflow: auto;"
      >
        <div
          class="scroller"
        >
          <div
            class="form-input-checkbox"
          >
            <input
              checked=""
              id="81211c24-51c0-46ec-b1e0-18db55880958"
              name="81211c24-51c0-46ec-b1e0-18db55880958"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Jollof Rice, Beef and Plantain
            </label>
          </div>
          <div
            class="form-input-checkbox"
          >
            <input
              id="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              name="36d525d1-efc9-4b75-9999-3e3d8dc64ce3"
              type="checkbox"
            />
              
            <label
              for="checkbox"
            >
              Vegetable Sharwama and Guava Smoothie
            </label>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            aria-busy="true"
            aria-label="three-dots-loading"
            class="sc-beySPh gZmPOF mini-loader"
            data-testid="three-dots-loading"
            role="progressbar"
          >
            <svg
              data-testid="three-dots-svg"
              fill="#4fa94d"
              height="80"
              viewBox="0 0 120 30"
              width="80"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="15"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
              <circle
                attributeName="fill-opacity"
                cx="60"
                cy="15"
                from="1"
                r="9"
                to="0.3"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="9"
                  repeatCount="indefinite"
                  to="9"
                  values="9;15;9"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="0.5"
                  repeatCount="indefinite"
                  to="0.5"
                  values=".5;1;.5"
                />
              </circle>
              <circle
                cx="105"
                cy="15"
                r="15"
              >
                <animate
                  attributeName="r"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="15"
                  repeatCount="indefinite"
                  to="15"
                  values="15;9;15"
                />
                <animate
                  attributeName="fill-opacity"
                  begin="0s"
                  calcMode="linear"
                  dur="0.8s"
                  from="1"
                  repeatCount="indefinite"
                  to="1"
                  values="1;.5;1"
                />
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="btn btn-pri btn-block"
    type="button"
  >
    SAVE MEAL OPTIONS
  </button>
</div>
`;
